<?xml version="1.0" encoding="utf-8"?>
<!--
    The MIT License (MIT)

    Copyright 2022 Stream.IO, Inc. All Rights Reserved.

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in
    all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
    THE SOFTWARE.
-->
<resources>
    <string name="app_name">VirtualEvent Demo</string>

    <!-- Bottom Navigation Tabs -->
    <string name="title_overview">Overview</string>
    <string name="title_events">Events</string>
    <string name="title_dm">DM</string>

    <!-- Events -->
    <string name="private_label">Private</string>
    <string name="moderated_label">Moderated</string>

    <!-- Overview Screen -->
    <string name="overview_title">World Hacker Summit 2021</string>
    <string name="overview_subtitle"><![CDATA[Presented by <b>Stream</b>]]></string>
    <string name="overview_stats_title">Stats</string>
    <string name="overview_description_title">Description</string>
    <string name="overview_description">
        <![CDATA["Welcome to the inaugural World Hacker Summit!
    \nThe goal of today's event is to spotlight innovative thought leaders and to provide an opportunity to share and exchange new ideas, technology trends and networking.
    \nClick here to watch a two-minute tutorial with step-by-step instruction for how you can best maximize today's in-platform experience. We encourage you to view the event schedule and to take full advantage of all that this dynamic virtual event platform has to offer!
    \n\n• Engage in real-time networking and Q&A opportunities on a local, national, and global level.
    \n• Grow your personal brand and your community in the \"Networking\" area. Here you will get paired with like minded individuals for 1:1 conversation.
    \n• Take your virtual connections one step further — by initiating a request to schedule a meeting or sending a direct message with anyone in the \"Participants\" tab. You will have the opportunity to connect in a private conversation or private video session with up to 9 other people.
    \n\nEnjoy today's event and don't forget to download your virtual passport for your chance to win. Contest details are noted below:
    \n\n1. Download Your Virtual Passport.
    \n2. Engage with booth representatives and ask for their unique booth code. It's that easy!
    \n3. Enter the code of each booth you visit in the corresponding passport field, along with your full name. To qualify, we ask that you visit a minimum of 4 booths.
    \n4. Submit your completed passport to Dorah Nielsen at dorah.nielsen@whs.com by 10 a.m. EST on 3/6.
    \n5. Stay tuned. Winners will be announced on 3/6 on our social media sites! "]]>
    </string>
    <string name="overview_partners_title">Partners</string>
    <string name="overview_schedule_title">Schedule</string>
    <string name="overview_hypercube_title">ESG Data - How to create it</string>
    <string name="overview_hypercube_description">ESG Regulations, Standards and Disclosure: Who to publish it for and how to make it meaningful.</string>
    <string name="overview_layers_title">Data strategy and executive communication</string>
    <string name="overview_layers_description">How to set a business plans to use information to a competitive advantage and support enterprise goals.</string>

    <!-- Start Direct Chat Screen -->
    <string name="start_direct_chat_title">Select a participant</string>

    <!-- Direct Chat Screen -->
    <string name="direct_messages_empty_title">No direct message yet</string>
    <string name="direct_messages_empty_description">You will see your first direct message here when you receive it.</string>
    <string name="direct_message_start_chat">Start a chat</string>

    <!-- Switch User Screen -->
    <string name="switch_user_title">Select User</string>
</resources>