<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@+id/navigation_overview"
    >

    <fragment
        android:id="@+id/navigation_overview"
        android:label="@string/title_overview"
        android:name="io.getstream.chat.virtualevent.feature.overview.OverviewFragment"
        tools:layout="@layout/fragment_overview"
        />

    <fragment
        android:id="@+id/navigation_events"
        android:label="@string/title_events"
        android:name="io.getstream.chat.virtualevent.feature.event.list.EventsFragment"
        tools:layout="@layout/fragment_events"
        />

    <fragment
        android:id="@+id/navigation_dm"
        android:label="@string/title_dm"
        android:name="io.getstream.chat.virtualevent.feature.dm.list.DirectChatsFragment"
        tools:layout="@layout/fragment_direct_chats"
        />

</navigation>