<?xml version="1.0" encoding="utf-8"?>
<!--
    The MIT License (MIT)

    Copyright 2022 Stream.IO, Inc. All Rights Reserved.

    Permission is hereby granted, free of charge, to any person obtaining a copy
    of this software and associated documentation files (the "Software"), to deal
    in the Software without restriction, including without limitation the rights
    to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
    copies of the Software, and to permit persons to whom the Software is
    furnished to do so, subject to the following conditions:

    The above copyright notice and this permission notice shall be included in
    all copies or substantial portions of the Software.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
    IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
    FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
    AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
    LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
    OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
    THE SOFTWARE.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >

    <androidx.cardview.widget.CardView
        style="@style/EventCard"
        android:foreground="?selectableItemBackground"
        android:id="@+id/event2CardView"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_medium"
            android:layout_width="match_parent"
            >

            <ImageView
                android:id="@+id/layersHeaderImageView"
                android:layout_height="162dp"
                android:layout_width="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/bg_event_layers"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                style="@style/OverviewSectionTitle"
                android:drawablePadding="@dimen/margin_small"
                android:id="@+id/layersTitleTextView"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_width="match_parent"
                android:text="@string/overview_layers_title"
                app:drawableLeftCompat="@drawable/ic_qa"
                app:layout_constraintTop_toBottomOf="@+id/layersHeaderImageView"
                />

            <TextView
                android:id="@+id/layersDescriptionTextView"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_medium"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_width="match_parent"
                android:text="@string/overview_layers_description"
                android:textAppearance="@style/Body"
                android:textColor="@color/text_high_emphasis"
                app:layout_constraintTop_toBottomOf="@+id/layersTitleTextView"
                />

            <TextView
                android:drawablePadding="@dimen/margin_small"
                android:gravity="center_vertical"
                android:id="@+id/layersParticipantsLogoImageView"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:text="6/9"
                android:textColor="@color/text_high_emphasis"
                app:drawableLeftCompat="@drawable/ic_participant"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/layersDescriptionTextView"
                />

            <TextView
                android:drawablePadding="@dimen/margin_small"
                android:gravity="center_vertical"
                android:id="@+id/layersParticipantsCountTextView"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:text="150"
                android:textColor="@color/text_high_emphasis"
                app:drawableLeftCompat="@drawable/ic_eye"
                app:layout_constraintBottom_toBottomOf="@+id/layersParticipantsLogoImageView"
                app:layout_constraintStart_toEndOf="@+id/layersParticipantsLogoImageView"
                app:layout_constraintTop_toTopOf="@+id/layersParticipantsLogoImageView"
                />

            <TextView
                android:background="@drawable/bg_badge_moderated"
                android:gravity="center"
                android:layout_height="24dp"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:paddingHorizontal="@dimen/margin_small"
                android:text="@string/moderated_label"
                android:textColor="@color/static_black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>